// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyWithResults component shows ResultsSorter without genre 1`] = `
<section
  className="results"
>
  <ResultsSorter
    moviesCount={2}
  />
  <div
    className="results-list"
  >
    <MovieCard
      handleMovieCardClick={[MockFunction]}
      movie={
        Object {
          "genres": Array [
            "Action",
            "Crime",
          ],
          "overview": "An assassin is shot at the altar by her ruthless employer, Bill and other members of their assassination circle – but 'The Bride' lives to plot her vengeance. Setting out for some payback, she makes a death list and hunts down those who wronged her, saving Bill for last.",
          "poster_path": "https://image.tmdb.org/t/p/w500/97fNAi62HawGjWru7PvVmF7RAbU.jpg",
          "release_date": "2003-10-10",
          "runtime": 111,
          "tagline": "Go for the kill.",
          "title": "Kill Bill: Vol. 1",
          "vote_average": 7.8,
        }
      }
    />
    <MovieCard
      handleMovieCardClick={[MockFunction]}
      movie={
        Object {
          "genres": Array [
            "Action",
            "Crime",
            "Thriller",
          ],
          "overview": "The Bride unwaveringly continues on her roaring rampage of revenge against the band of assassins who had tried to kill her and her unborn child. She visits each of her former associates one-by-one, checking off the victims on her Death List Five until there's nothing left to do … but kill Bill.",
          "poster_path": "https://image.tmdb.org/t/p/w500/au9lFA5a2ZnBKCzPbZQf00r7J64.jpg",
          "release_date": "2004-04-16",
          "runtime": 136,
          "tagline": "The bride is back for the final cut.",
          "title": "Kill Bill: Vol. 2",
          "vote_average": 7.7,
        }
      }
    />
  </div>
</section>
`;

exports[`BodyWithResults component works as expected 1`] = `
<section
  className="results"
>
  <ResultsDescription
    genre="Fiction"
  />
  <div
    className="results-list"
  >
    <MovieCard
      handleMovieCardClick={[MockFunction]}
      movie={
        Object {
          "genres": Array [
            "Action",
            "Crime",
          ],
          "overview": "An assassin is shot at the altar by her ruthless employer, Bill and other members of their assassination circle – but 'The Bride' lives to plot her vengeance. Setting out for some payback, she makes a death list and hunts down those who wronged her, saving Bill for last.",
          "poster_path": "https://image.tmdb.org/t/p/w500/97fNAi62HawGjWru7PvVmF7RAbU.jpg",
          "release_date": "2003-10-10",
          "runtime": 111,
          "tagline": "Go for the kill.",
          "title": "Kill Bill: Vol. 1",
          "vote_average": 7.8,
        }
      }
    />
    <MovieCard
      handleMovieCardClick={[MockFunction]}
      movie={
        Object {
          "genres": Array [
            "Action",
            "Crime",
            "Thriller",
          ],
          "overview": "The Bride unwaveringly continues on her roaring rampage of revenge against the band of assassins who had tried to kill her and her unborn child. She visits each of her former associates one-by-one, checking off the victims on her Death List Five until there's nothing left to do … but kill Bill.",
          "poster_path": "https://image.tmdb.org/t/p/w500/au9lFA5a2ZnBKCzPbZQf00r7J64.jpg",
          "release_date": "2004-04-16",
          "runtime": 136,
          "tagline": "The bride is back for the final cut.",
          "title": "Kill Bill: Vol. 2",
          "vote_average": 7.7,
        }
      }
    />
  </div>
</section>
`;
